--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "babylonjs": "^4.2.0",
+    "babylonjs": "^5.0.0-alpha.40",
+    "babylonjs-gui": "^5.0.0-alpha.40",
+    "babylonjs-loaders": "^5.0.0-alpha.40",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
